--- a/spec/dashboard.api.yaml
+++ b/spec/dashboard.api.yaml
@@ -17,15 +17,20 @@ paths:
           schema:
             type: string
             description: "Filter dashboards by name."
+        - name: includeDashboard
+          in: query
+          required: false
+          schema:
+            type: boolean
+            default: false
+            description: "If true, includes the full dashboard content. Defaults to false (only metadata is returned)."
       responses:
         "200":
-          description: "A list of dashboard containers."
+          description: "A list of dashboards."
           content:
             application/json:
               schema:
-                type: array
-                items:
-                  $ref: "#/components/schemas/DashboardReadSchema"
+                $ref: "#/components/schemas/DashboardReadSchema"
         "400":
           description: "Invalid query parameters."
           content:
@@ -56,7 +61,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/DashboardReadSchema"
+                $ref: "#/components/schemas/DashboardReadFullSchema"
         "400":
           description: "Invalid dashboard data."
           content:
@@ -78,6 +83,13 @@ paths:
       operationId: getDashboard
       parameters:
         - $ref: "#/components/parameters/dashboardIdentifier"
+        - name: includeDashboard
+          in: query
+          required: false
+          schema:
+            type: boolean
+            default: false
+            description: "If true, includes the full dashboard content. Defaults to false (only metadata is returned)."
       responses:
         "200":
           description: "A dashboard"
@@ -113,7 +125,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/DashboardReadSchema"
+                $ref: "#/components/schemas/DashboardReadFullSchema"
         "400":
           description: "Invalid dashboard data."
           content:
@@ -149,13 +161,13 @@ paths:
         "500":
           $ref: "generic_error_handling.xapi.yaml#/components/responses/genericErrorsResponse"
 
-  /dashboards/{dashboardId}/share:
+  /dashboards/{dashboardId}/clone:
     post:
       tags:
         - dashboards
-      summary: "Share a dashboard"
-      description: "Share a dashboard with users or groups."
-      operationId: shareDashboard
+      summary: "Clone a dashboard"
+      description: "Clone a dashboard with users or groups."
+      operationId: cloneDashboard
       parameters:
         - $ref: "#/components/parameters/dashboardIdentifier"
       requestBody:
@@ -163,70 +175,16 @@ paths:
         content:
           application/json:
             schema:
-              $ref: "#/components/schemas/DashboardShareRequest"
+              $ref: "#/components/schemas/DashboardCloneRequest"
       responses:
         "202":
-          description: "Dashboard share request accepted."
+          description: "Dashboard clone request accepted."
         "400":
-          description: "Invalid share request."
+          description: "Invalid clone request."
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/DashboardShareError"
-        "401":
-          description: "User is not authorized."
-        "403":
-          description: "User is forbidden for the provided permission."
-        "404":
-          description: "Dashboard not found."
-        "500":
-          $ref: "generic_error_handling.xapi.yaml#/components/responses/genericErrorsResponse"
-    get:
-      tags:
-        - dashboards
-      summary: "Get dashboard sharing settings"
-      description: "Get the current sharing settings for a dashboard."
-      operationId: getDashboardSharing
-      parameters:
-        - $ref: "#/components/parameters/dashboardIdentifier"
-      responses:
-        "200":
-          description: "Dashboard sharing settings."
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/DashboardShareInfo"
-        "401":
-          description: "User is not authorized."
-        "403":
-          description: "User is forbidden for the provided permission."
-        "404":
-          description: "Dashboard not found."
-        "500":
-          $ref: "generic_error_handling.xapi.yaml#/components/responses/genericErrorsResponse"
-    delete:
-      tags:
-        - dashboards
-      summary: "Remove dashboard sharing"
-      description: "Remove sharing settings for specific users or groups."
-      operationId: removeDashboardSharing
-      parameters:
-        - $ref: "#/components/parameters/dashboardIdentifier"
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              $ref: "#/components/schemas/DashboardUnshareRequest"
-      responses:
-        "202":
-          description: "Dashboard unshare request accepted."
-        "400":
-          description: "Invalid unshare request."
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/DashboardShareError"
+                $ref: "#/components/schemas/DashboardCloneError"
         "401":
           description: "User is not authorized."
         "403":
@@ -255,21 +213,12 @@ components:
       type: string
       description: "The identifier of a user"
 
-    GroupId:
-      type: string
-      description: "The identifier of a group"
-
     DashboardScope:
       type: string
-      enum: [ globalDashboard, personalDashboard ]
-      description: "Scope of the dashboard. 'globalDashboard' for shared with everyone, 'personalDashboard' for owned by the current user."
-      default: "personalDashboard"
-
-    DashboardSharePermission:
-      type: string
-      enum: [ readDashboard, editDashboard ]
-      description: "Permission level for sharing: read-only or edit access"
-
+      enum: [ globalDashboard, privateDashboard ]
+      description: "Scope of the dashboard. 'globalDashboard' for accessible by everyone, 'privateDashboard' for owned and accessible by the current user."
+      default: "privateDashboard"
+    
     DashboardWriteSchema:
       type: object
       properties:
@@ -292,95 +241,76 @@ components:
         - dashboard
 
     DashboardReadSchema:
+      discriminator:
+        propertyName: _type
+      oneOf:
+        - $ref: "#/components/schemas/DashboardReadMetadataSchema"
+        - $ref: "#/components/schemas/DashboardReadFullSchema"
+
+    DashboardReadBaseSchema:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int64
+          readOnly: true
+        name:
+          type: string
+          description: "Name of the dashboard"
+        description:
+          type: string
+          description: "Description of the dashboard"
+        scope:
+          $ref: "#/components/schemas/DashboardScope"
+        ownerId:
+          type: string
+          description: "Identifier of the user who owns this dashboard."
+          readOnly: true
+        lastUpdateTimestamp:
+          type: integer
+          format: int64
+      required:
+        - id
+        - name
+        - description
+        - scope
+        - ownerId
+        - lastUpdateTimestamp
+
+    DashboardReadMetadataSchema:
       allOf:
-        - $ref: "#/components/schemas/DashboardWriteSchema"
+        - $ref: "#/components/schemas/DashboardReadBaseSchema"
         - type: object
           properties:
-            id:
-              type: integer
-              format: int64
-              readOnly: true
-            ownerId:
+            _type:
               type: string
-              description: "Identifier of the user who owns this dashboard. Set automatically for personal dashboards. Unset for global dashboards."
-              readOnly: true
-            lastUpdateTimestamp:
-              type: integer
-              format: int64
+              enum:
+                - DashboardReadMetadataSchema
           required:
-            - id
-            - ownerId
-            - lastUpdateTimestamp
+            - _type
 
-    DashboardShareRequest:
-      type: object
-      properties:
-        users:
-          type: array
-          description: "List of user identifiers to share the dashboard with"
-          items:
-            $ref: "#/components/schemas/UserId"
-        groups:
-          type: array
-          description: "List of group identifiers to share the dashboard with"
-          items:
-            $ref: "#/components/schemas/GroupId"
-        permission:
-          $ref: "#/components/schemas/DashboardSharePermission"
-      required:
-        - permissions
+    DashboardReadFullSchema:
+      allOf:
+        - $ref: "#/components/schemas/DashboardReadBaseSchema"
+        - type: object
+          properties:
+            _type:
+              type: string
+              enum:
+                - DashboardReadFullSchema
+            dashboard:
+              $ref: "common_perses.api.yaml#/components/schemas/Dashboard"
+          required:
+            - _type
+            - dashboard
 
-    DashboardUnshareRequest:
-      type: object
-      properties:
-        users:
-          type: array
-          description: "List of user IDs to remove sharing for"
-          items:
-            $ref: "#/components/schemas/UserId"
-        groups:
-          type: array
-          description: "List of group IDs to remove sharing for"
-          items:
-            $ref: "#/components/schemas/GroupId"
-        all:
-          type: boolean
-          description: "If true, removes all sharing (except for the owner)"
-          default: false
-
-    DashboardShareInfo:
-      type: object
-      properties:
-        users:
-          type: array
-          items:
-            $ref: "#/components/schemas/DashboardUserPermission"
-        groups:
-          type: array
-          items:
-            $ref: "#/components/schemas/DashboardGroupPermission"
-
-    DashboardUserPermission:
+    DashboardCloneRequest:
       type: object
       properties:
         userId:
           $ref: "#/components/schemas/UserId"
-        permission:
-          $ref: "#/components/schemas/DashboardSharePermission"
       required:
         - userId
-        - permission
-
-    DashboardGroupPermission:
-      type: object
-      properties:
-        groupId:
-          $ref: "#/components/schemas/GroupId"
-        permission:
-          $ref: "#/components/schemas/DashboardSharePermission"
-      required:
-        - groupId
-        - permissionn
 
     DashboardCreateError:
       type: object
@@ -410,16 +340,16 @@ components:
         - _type
         - errorMessage
 
-    DashboardShareError:
+    DashboardCloneError:
       type: object
       properties:
         _type:
           type: string
           enum:
-            - DashboardShareError
+            - DashboardCloneError
         errorMessage:
           type: string
-          description: "A detailed error message describing why the sharing operation failed."
+          description: "A detailed error message describing why the cloning operation failed."
       required:
         - _type
         - errorMessage
