--- a/spec/common_perses.api.yaml
+++ b/spec/common_perses.api.yaml
@@ -3,15 +3,18 @@ info:
   version: "1.0.0"
   description: |
     This spec encapsulates the Perses Dashboard models necessary to embody a Perses Dashboard. 
-      
+    
     See the Perses API reference here: https://perses.dev/perses/docs/api/ 
     
     Note:
-      - there's no automation to generate theses models. They were generated manually as a once-off exercise, with the expectation that minor tweaks and adjustments would likely need to happen over time.
+      - there's no automation to (re)generate theses models. They were generated manually as a once-off exercise, with the expectation that minor tweaks and adjustments would likely need to happen over time.
       - schemas are prefixed with 'Perses' to make it simpler to post process generated code.
 components:
   schemas:
+    PersesKind:
+      type: string
     PersesDashboard:
+      type: object
       properties:
         kind:
           $ref: '#/components/schemas/PersesKind'
@@ -19,58 +22,53 @@ components:
           $ref: '#/components/schemas/PersesProjectMetadata'
         spec:
           $ref: '#/components/schemas/PersesDashboardSpec'
-      type: object
     PersesDashboardSpec:
+      type: object
       properties:
         datasources:
-          additionalProperties:
-            $ref: '#/components/schemas/PersesDatasourceSpec'
           description: Datasources is an optional list of datasource definition.
           type: object
+          additionalProperties:
+            $ref: '#/components/schemas/PersesDatasourceSpec'
         display:
-          $ref: '#/components/schemas/PersesDisplay'
+          $ref: '#/components/schemas/PersesDashboardDisplaySpec'
         duration:
           $ref: '#/components/schemas/PersesDuration'
         layouts:
+          type: array
           items:
             $ref: '#/components/schemas/PersesLayout'
-          type: array
         panels:
+          type: object
           additionalProperties:
             $ref: '#/components/schemas/PersesPanel'
-          type: object
         refreshInterval:
           $ref: '#/components/schemas/PersesDuration'
         variables:
-          items:
-            $ref: '#/components/schemas/PersesVariable'
           type: array
-      type: object
+          items:
+            $ref: '#/components/schemas/PersesVariableTypes'
     PersesDatasourceSpec:
+      type: object
       properties:
         default:
           type: boolean
         display:
-          $ref: '#/components/schemas/PersesDisplay'
+          $ref: '#/components/schemas/PersesDashboardDisplaySpec'
         plugin:
           $ref: '#/components/schemas/PersesPlugin'
+    PersesDashboardDisplaySpec:
       type: object
-    PersesDisplay:
       properties:
         description:
           type: string
         name:
           type: string
-      type: object
     PersesDuration:
-      description: |-
-        A Duration represents the elapsed time between two instants
-        as an int64 nanosecond count. The representation limits the
-        largest representable duration to approximately 290 years.
-      format: int64
-      type: integer
-    PersesKind:
       type: string
+      description: |
+        A Duration represents the elapsed time between two instants.
+        It must be provided as a string like "1h", "30m", "15s".
     PersesLayoutKind:
       type: string
       enum:
@@ -82,14 +80,6 @@ components:
         $ref:
           type: string
           description: "The JSON reference pointing to the actual object."
-        path:
-          type: array
-          items:
-            type: string
-          description: "A list of strings used to navigate to the referenced object."
-        object:
-          type: object
-          description: "The actual referenced object (not included in the OpenAPI spec, but used internally)."
       required:
         - $ref
     PersesGridLayoutCollapse:
@@ -155,6 +145,7 @@ components:
         - kind
         - spec
     PersesLink:
+      type: object
       properties:
         name:
           type: string
@@ -166,8 +157,8 @@ components:
           type: string
         url:
           type: string
-      type: object
     PersesMetadata:
+      type: object
       properties:
         createdAt:
           format: date-time
@@ -180,22 +171,22 @@ components:
         version:
           format: uint64
           type: integer
-      type: object
     PersesPanel:
+      type: object
       properties:
         kind:
           type: string
         spec:
           $ref: '#/components/schemas/PersesPanelSpec'
-      type: object
     PersesPanelDisplay:
+      type: object
       properties:
         description:
           type: string
         name:
           type: string
-      type: object
     PersesPanelSpec:
+      type: object
       properties:
         display:
           $ref: '#/components/schemas/PersesPanelDisplay'
@@ -209,15 +200,15 @@ components:
           items:
             $ref: '#/components/schemas/PersesQuery'
           type: array
-      type: object
     PersesPlugin:
+      type: object
       properties:
         kind:
           type: string
         spec:
           type: object
-      type: object
     PersesProjectMetadata:
+      type: object
       properties:
         createdAt:
           format: date-time
@@ -232,39 +223,141 @@ components:
         version:
           format: uint64
           type: integer
-      title: ProjectMetadata is the metadata struct for resources that belongs to a project.
-      type: object
-    PersesProjectMetadataWrapper:
-      description: |-
-        This wrapping struct is required to allow defining a custom unmarshall on Metadata
-        without breaking the Project attribute (the fact Metadata is injected line in
-        ProjectMetadata caused Project string to be ignored when unmarshalling)
-      properties:
-        project:
-          type: string
-      type: object
     PersesQuery:
+      type: object
       properties:
         kind:
           type: string
         spec:
           $ref: '#/components/schemas/PersesQuerySpec'
-      type: object
     PersesQuerySpec:
+      type: object
       properties:
         plugin:
           $ref: '#/components/schemas/PersesPlugin'
+    PersesVariableDisplaySpec:
       type: object
-    PersesVariable:
+      properties:
+        name:
+          type: string
+        description:
+          type: string
+        hidden:
+          type: boolean
+    PersesVariableSort:
+      type: string
+      enum:
+        - none
+        - alphabetical-asc
+        - alphabetical-desc
+        - numerical-asc
+        - numerical-desc
+        - alphabetical-ci-asc
+        - alphabetical-ci-desc
+    PersesListVariableDefaultSingleValue:
+      type: object
       properties:
         kind:
-          $ref: '#/components/schemas/PersesKind'
-        spec:
-          $ref: '#/components/schemas/PersesvariableSpec'
-      type: object
-    PersesvariableSpec:
-      properties:
-        GetName:
-          description: GetName returns the name of the variable. It will be used to reference the variable in others
           type: string
+          enum:
+            - singleValue
+        singleValue:
+          type: string
+      required:
+        - kind
+        - singleValue
+    PersesListVariableDefaultSliceValues:
       type: object
+      properties:
+        kind:
+          type: string
+          enum:
+            - sliceValues
+        sliceValues:
+          type: array
+          items:
+            type: string
+      required:
+        - kind
+        - sliceValues
+    PersesListVariableDefaultValue:
+      type: object
+      discriminator:
+        propertyName: kind
+        mapping:
+          singleValue: '#/components/schemas/PersesListVariableDefaultSingleValue'
+          sliceValues: '#/components/schemas/PersesListVariableDefaultSliceValues'
+      oneOf:
+        - $ref: '#/components/schemas/PersesListVariableDefaultSingleValue'
+        - $ref: '#/components/schemas/PersesListVariableDefaultSliceValues'
+    PersesTextVariableSpec:
+      type: object
+      properties:
+        name:
+          type: string
+        display:
+          $ref: '#/components/schemas/PersesVariableDisplaySpec'
+        value:
+          type: string
+        constant:
+          type: boolean
+      required:
+        - name
+        - value
+    PersesTextVariable:
+      type: object
+      properties:
+        kind:
+          type: string
+          enum:
+            - TextVariable
+        spec:
+          $ref: '#/components/schemas/PersesTextVariableSpec'
+      required:
+        - kind
+    PersesListVariableSpec:
+      type: object
+      properties:
+        name:
+          type: string
+        display:
+          $ref: '#/components/schemas/PersesVariableDisplaySpec'
+        defaultValue:
+          $ref: '#/components/schemas/PersesListVariableDefaultValue'
+        allowAllValue:
+          type: boolean
+        allowMultiple:
+          type: boolean
+        customAllValue:
+          type: string
+        capturingRegexp:
+          type: string
+        sort:
+          $ref: '#/components/schemas/PersesVariableSort'
+        plugin:
+          $ref: '#/components/schemas/PersesPlugin'
+      required:
+        - name
+        - allowAllValue
+        - allowMultiple
+        - plugin
+    PersesListVariable:
+      type: object
+      properties:
+        kind:
+          type: string
+          enum:
+            - ListVariable
+        spec:
+          $ref: '#/components/schemas/PersesListVariableSpec'
+      required:
+        - kind
+    PersesVariableTypes:
+      discriminator:
+        propertyName: kind
+        mapping:
+          TextVariable: '#/components/schemas/PersesTextVariable'
+          ListVariable: '#/components/schemas/PersesListVariable'
+      oneOf:
+        - $ref: '#/components/schemas/PersesTextVariable'
+        - $ref: '#/components/schemas/PersesListVariable'
