--- a/spec/dashboard.api.yaml
+++ b/spec/dashboard.api.yaml
@@ -20,10 +20,6 @@ paths:
           $ref: "#/components/responses/dashboards"
         "400":
           $ref: "#/components/responses/dashboardInvalidQueryError"
-        "401":
-          description: "User is not authorized."
-        "403":
-          description: "User is forbidden for the provided permission."
         "500":
           $ref: "generic_error_handling.xapi.yaml#/components/responses/genericErrorsResponse"
     post:
@@ -39,10 +35,6 @@ paths:
           $ref: "#/components/responses/dashboardSaved"
         "400":
           $ref: "#/components/responses/dashboardValidationError"
-        "401":
-          description: "User is not authorized."
-        "403":
-          description: "User is forbidden for the provided permission."
         "500":
           $ref: "generic_error_handling.xapi.yaml#/components/responses/genericErrorsResponse"
   /dashboards/{dashboardId}:
@@ -58,10 +50,6 @@ paths:
       responses:
         "200":
           $ref: "#/components/responses/dashboard"
-        "401":
-          description: "User is not authorized."
-        "403":
-          description: "User is forbidden for the provided permission."
         "404":
           description: "Dashboard not found."
         "500":
@@ -81,10 +69,6 @@ paths:
           $ref: "#/components/responses/dashboardSaved"
         "400":
           $ref: "#/components/responses/dashboardValidationError"
-        "401":
-          description: "User is not authorized."
-        "403":
-          description: "User is forbidden for the provided permission."
         "404":
           description: "Dashboard not found."
         "500":
@@ -98,12 +82,8 @@ paths:
       parameters:
         - $ref: "#/components/parameters/dashboardIdentifier"
       responses:
-        "202":
-          description: "Dashboard deletion request accepted."
-        "401":
-          description: "User is not authorized."
-        "403":
-          description: "User is forbidden for the provided permission."
+        "200":
+          description: "Dashboard deleted."
         "404":
           description: "Dashboard not found."
         "500":
@@ -121,14 +101,10 @@ paths:
       requestBody:
         $ref: "#/components/requestBodies/dashboardCloneRequest"
       responses:
-        "202":
-          description: "Dashboard clone request accepted."
+        "201":
+          $ref: "#/components/responses/dashboardSaved"
         "400":
           $ref: "#/components/responses/dashboardCloneError"
-        "401":
-          description: "User is not authorized."
-        "403":
-          description: "User is forbidden for the provided permission."
         "404":
           description: "Dashboard not found."
         "500":
@@ -140,26 +116,26 @@ components:
       in: path
       name: dashboardId
       required: true
+      description: "The identifier of a dashboard"
       schema:
         $ref: "#/components/schemas/DashboardId"
-      description: "The identifier of a dashboard"
 
     filterByName:
-      name: name
       in: query
+      name: name
       required: false
+      description: "Filter dashboards by name."
       schema:
         type: string
-        description: "Filter dashboards by name."
 
     loadFullDashboard:
       in: query
       name: loadFullDashboard
       required: false
+      description: "If true, includes the full dashboard content. Defaults to false (only metadata is returned)."
       schema:
         type: boolean
         default: false
-        description: "If true, includes the full dashboard content. Defaults to false (only metadata is returned)."
 
   requestBodies:
     dashboardWriteRequest:
@@ -232,7 +208,6 @@ components:
       type: string
       enum: [ globalDashboard, privateDashboard ]
       description: "Scope of the dashboard. 'globalDashboard' for accessible by everyone, 'privateDashboard' for owned and accessible by the current user."
-      default: "privateDashboard"
 
     DashboardList:
       type: object
@@ -340,14 +315,10 @@ components:
     DashboardBaseError:
       type: object
       properties:
-        _type:
-          type: string
-          description: "The specific error type."
         errorMessage:
           type: string
           description: "A detailed error message describing why the operation failed."
       required:
-        - _type
         - errorMessage
 
     DashboardValidationError:
